--- a/peprs.ui
+++ b/peprs.ui
@@ -253,7 +253,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
          <enum>QTabWidget::Rounded</enum>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="algoTab">
          <property name="layoutDirection">
@@ -6612,7 +6612,7 @@ QFrame{background-color:#d1d5de}</string>
                      <rect>
                       <x>0</x>
                       <y>0</y>
-                      <width>98</width>
+                      <width>332</width>
                       <height>500</height>
                      </rect>
                     </property>
@@ -6809,7 +6809,7 @@ QFrame{background-color:#d1d5de}</string>
                      <rect>
                       <x>0</x>
                       <y>0</y>
-                      <width>98</width>
+                      <width>332</width>
                       <height>550</height>
                      </rect>
                     </property>
@@ -33686,7 +33686,7 @@ QWidget#power2{background-color:rgb(247,247,247)}
 QWidget#power3{background-color:rgb(247,247,247)}</string>
             </property>
             <property name="currentIndex">
-             <number>2</number>
+             <number>4</number>
             </property>
             <widget class="QWidget" name="vsg">
              <property name="styleSheet">
@@ -42524,8 +42524,8 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                           <rect>
                            <x>0</x>
                            <y>0</y>
-                           <width>590</width>
-                           <height>382</height>
+                           <width>593</width>
+                           <height>391</height>
                           </rect>
                          </property>
                          <property name="minimumSize">
@@ -54893,7 +54893,7 @@ Analyzer</string>
                         </widget>
                        </item>
                        <item row="1" column="1">
-                        <widget class="QPlainTextEdit" name="plainTextEdit_74">
+                        <widget class="QPlainTextEdit" name="powerMeterOffset">
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                            <horstretch>0</horstretch>
@@ -54928,7 +54928,7 @@ Analyzer</string>
                         </widget>
                        </item>
                        <item row="2" column="1">
-                        <widget class="QPlainTextEdit" name="plainTextEdit_70">
+                        <widget class="QPlainTextEdit" name="powerMeterFrequency">
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                            <horstretch>0</horstretch>
@@ -55063,7 +55063,7 @@ Analyzer</string>
                         </widget>
                        </item>
                        <item row="6" column="1" colspan="2">
-                        <widget class="QPlainTextEdit" name="plainTextEdit_86">
+                        <widget class="QPlainTextEdit" name="powerMeterAddress">
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                            <horstretch>0</horstretch>
@@ -55114,7 +55114,7 @@ Analyzer</string>
                         </widget>
                        </item>
                        <item row="7" column="1" colspan="2">
-                        <widget class="QPlainTextEdit" name="plainTextEdit_87">
+                        <widget class="QPlainTextEdit" name="powerMeterPartNum">
                          <property name="enabled">
                           <bool>false</bool>
                          </property>
