--- a/dutsetup.ui
+++ b/dutsetup.ui
@@ -16,28 +16,28 @@
   <widget class="QStackedWidget" name="dutStackedWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>569</width>
-     <height>281</height>
+     <x>0</x>
+     <y>0</y>
+     <width>591</width>
+     <height>301</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="page">
     <widget class="QWidget" name="verticalLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>0</x>
+       <x>10</x>
        <y>20</y>
-       <width>551</width>
-       <height>251</height>
+       <width>571</width>
+       <height>261</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0">
       <property name="spacing">
-       <number>60</number>
+       <number>30</number>
       </property>
       <property name="leftMargin">
        <number>15</number>
@@ -46,7 +46,7 @@
        <number>15</number>
       </property>
       <property name="bottomMargin">
-       <number>15</number>
+       <number>6</number>
       </property>
       <item>
        <widget class="QLabel" name="label">
@@ -66,7 +66,7 @@
          <enum>Qt::RightToLeft</enum>
         </property>
         <property name="text">
-         <string>Welcome! To get started please select the appropriate DUT setup:</string>
+         <string>Welcome! To get started please select the appropriate mode and DUT setup:</string>
         </property>
         <property name="textFormat">
          <enum>Qt::AutoText</enum>
@@ -86,16 +86,118 @@
        </widget>
       </item>
       <item>
+       <widget class="QGroupBox" name="groupBox">
+        <property name="styleSheet">
+         <string notr="true">QGroupBox {border:none}</string>
+        </property>
+        <property name="title">
+         <string/>
+        </property>
+        <widget class="QLabel" name="label_2">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>5</y>
+           <width>61</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+           <pointsize>11</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Mode:</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="pushButton">
+         <property name="geometry">
+          <rect>
+           <x>70</x>
+           <y>0</y>
+           <width>241</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton {border:1px solid rgb(5, 70, 127);border-radius:5px;background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0.489, stop:0 rgba(140, 202, 235, 255), stop:1 rgba(216, 242, 255, 255))}</string>
+         </property>
+         <property name="text">
+          <string>Generate, Analyze, &amp;&amp; Process Signals</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="geometry">
+          <rect>
+           <x>320</x>
+           <y>0</y>
+           <width>191</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Generate &amp;&amp; Analyze Signals</string>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="spacing">
-         <number>75</number>
+         <number>0</number>
         </property>
         <property name="leftMargin">
          <number>15</number>
         </property>
         <property name="rightMargin">
-         <number>15</number>
+         <number>0</number>
         </property>
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="font">
+           <font>
+            <family>Arial</family>
+            <pointsize>11</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>Setup:</string>
+          </property>
+         </widget>
+        </item>
         <item>
          <widget class="QRadioButton" name="sisoRadio">
           <property name="font">
@@ -200,8 +302,8 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
     <widget class="QFrame" name="frame">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>10</y>
+       <x>20</x>
+       <y>20</y>
        <width>551</width>
        <height>261</height>
       </rect>
