--- a/dutsetup.ui
+++ b/dutsetup.ui
@@ -212,6 +212,9 @@
           <property name="text">
            <string>SISO</string>
           </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
           <attribute name="buttonGroup">
            <string notr="true">dutButtonGroup</string>
           </attribute>
