--- a/peprs.ui
+++ b/peprs.ui
@@ -32638,7 +32638,7 @@ QWidget#power2{background-color:rgb(247,247,247)}
 QWidget#power3{background-color:rgb(247,247,247)}</string>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>2</number>
             </property>
             <widget class="QWidget" name="vsg">
              <property name="styleSheet">
@@ -46244,39 +46244,6 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="3" column="1">
-                              <widget class="QComboBox" name="comboBox_26">
-                               <property name="font">
-                                <font>
-                                 <family>Arial</family>
-                                 <pointsize>9</pointsize>
-                                </font>
-                               </property>
-                               <property name="layoutDirection">
-                                <enum>Qt::LeftToRight</enum>
-                               </property>
-                               <item>
-                                <property name="text">
-                                 <string>-Select-</string>
-                                </property>
-                               </item>
-                               <item>
-                                <property name="text">
-                                 <string>Backplane</string>
-                                </property>
-                               </item>
-                               <item>
-                                <property name="text">
-                                 <string>External</string>
-                                </property>
-                               </item>
-                               <item>
-                                <property name="text">
-                                 <string>Internal</string>
-                                </property>
-                               </item>
-                              </widget>
-                             </item>
                              <item row="4" column="0">
                               <widget class="QLabel" name="label_84">
                                <property name="font">
@@ -46314,34 +46281,6 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                <property name="text">
                                 <string>Autoscale Flag:</string>
                                </property>
-                              </widget>
-                             </item>
-                             <item row="6" column="1">
-                              <widget class="QComboBox" name="comboBox_27">
-                               <property name="font">
-                                <font>
-                                 <family>Arial</family>
-                                 <pointsize>9</pointsize>
-                                </font>
-                               </property>
-                               <property name="layoutDirection">
-                                <enum>Qt::LeftToRight</enum>
-                               </property>
-                               <item>
-                                <property name="text">
-                                 <string>-Select-</string>
-                                </property>
-                               </item>
-                               <item>
-                                <property name="text">
-                                 <string>True</string>
-                                </property>
-                               </item>
-                               <item>
-                                <property name="text">
-                                 <string>False</string>
-                                </property>
-                               </item>
                               </widget>
                              </item>
                              <item row="7" column="0">
@@ -46414,45 +46353,49 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="7" column="1">
-                              <widget class="QLineEdit" name="lineEdit_29">
-                               <property name="minimumSize">
-                                <size>
-                                 <width>30</width>
-                                 <height>24</height>
-                                </size>
+                             <item row="5" column="2">
+                              <widget class="QPushButton" name="filePushButton_21">
+                               <property name="text">
+                                <string/>
                                </property>
+                               <property name="icon">
+                                <iconset>
+                                 <normaloff>icons/folder 16x16.png</normaloff>icons/folder 16x16.png</iconset>
+                               </property>
+                               <property name="flat">
+                                <bool>true</bool>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="3" column="1" colspan="2">
+                              <widget class="QComboBox" name="comboBox_26">
                                <property name="font">
                                 <font>
                                  <family>Arial</family>
                                  <pointsize>9</pointsize>
                                 </font>
                                </property>
-                               <property name="text">
-                                <string/>
+                               <property name="layoutDirection">
+                                <enum>Qt::LeftToRight</enum>
                                </property>
+                               <item>
+                                <property name="text">
+                                 <string>-Select-</string>
+                                </property>
+                               </item>
+                               <item>
+                                <property name="text">
+                                 <string>True</string>
+                                </property>
+                               </item>
+                               <item>
+                                <property name="text">
+                                 <string>False</string>
+                                </property>
+                               </item>
                               </widget>
                              </item>
-                             <item row="8" column="1">
-                              <widget class="QLineEdit" name="lineEdit_30">
-                               <property name="minimumSize">
-                                <size>
-                                 <width>30</width>
-                                 <height>24</height>
-                                </size>
-                               </property>
-                               <property name="font">
-                                <font>
-                                 <family>Arial</family>
-                                 <pointsize>9</pointsize>
-                                </font>
-                               </property>
-                               <property name="text">
-                                <string/>
-                               </property>
-                              </widget>
-                             </item>
-                             <item row="4" column="1">
+                             <item row="4" column="1" colspan="2">
                               <widget class="QLineEdit" name="lineEdit_31">
                                <property name="minimumSize">
                                 <size>
@@ -46471,7 +46414,73 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="9" column="1">
+                             <item row="6" column="1" colspan="2">
+                              <widget class="QComboBox" name="comboBox_27">
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="layoutDirection">
+                                <enum>Qt::LeftToRight</enum>
+                               </property>
+                               <item>
+                                <property name="text">
+                                 <string>-Select-</string>
+                                </property>
+                               </item>
+                               <item>
+                                <property name="text">
+                                 <string>True</string>
+                                </property>
+                               </item>
+                               <item>
+                                <property name="text">
+                                 <string>False</string>
+                                </property>
+                               </item>
+                              </widget>
+                             </item>
+                             <item row="7" column="1" colspan="2">
+                              <widget class="QLineEdit" name="lineEdit_29">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>30</width>
+                                 <height>24</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string/>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="8" column="1" colspan="2">
+                              <widget class="QLineEdit" name="lineEdit_30">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>30</width>
+                                 <height>24</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string/>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="9" column="1" colspan="2">
                               <widget class="QLineEdit" name="lineEdit_32">
                                <property name="enabled">
                                 <bool>false</bool>
@@ -46493,7 +46502,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="2" column="1">
+                             <item row="2" column="1" colspan="2">
                               <widget class="QLineEdit" name="noAveragesField_scope">
                                <property name="enabled">
                                 <bool>false</bool>
@@ -46512,20 +46521,6 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                                <property name="text">
                                 <string/>
-                               </property>
-                              </widget>
-                             </item>
-                             <item row="5" column="2">
-                              <widget class="QPushButton" name="filePushButton_21">
-                               <property name="text">
-                                <string/>
-                               </property>
-                               <property name="icon">
-                                <iconset>
-                                 <normaloff>icons/folder 16x16.png</normaloff>icons/folder 16x16.png</iconset>
-                               </property>
-                               <property name="flat">
-                                <bool>true</bool>
                                </property>
                               </widget>
                              </item>
