fixing bugs throughout gui caused by recent code changes, complete and tested general SA equipment pages

--- a/dutsetup.ui
+++ b/dutsetup.ui
@@ -282,6 +282,8 @@
          <font>
           <family>Arial</family>
           <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
          </font>
         </property>
         <property name="cursor">
